--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.data.elasticsearch.cluster-name=sample-cluster-name
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 
 URL = https://api.imiconnect.in/resources/v1/messaging
+topicName=notification.send_sms
+apiKey=93ceffda-5941-11ea-9da9-025282c394f2
+groupId=myConsumerGroup
